update nextjs import for clerkClient

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -14,7 +14,7 @@ Clerk SDKs expose an instance of the Clerk Backend SDK for use in server environ
   The Backend SDK is accessible via the `clerkClient` object if you are using Next.js.
 
   ```jsx
-  import { clerkClient } from '@clerk/nextjs';
+  import { clerkClient } from '@clerk/nextjs/server';
   ```
   </Tab>
 
