remove literal type from page

--- a/docs/references/backend/types/clerk-backend-api-response.mdx
+++ b/docs/references/backend/types/clerk-backend-api-response.mdx
@@ -7,32 +7,15 @@ description: An interface that describes the response of a Clerk backend API req
 
 An interface that describes the response of a Clerk backend API request.
 
-```ts
-type ClerkBackendApiResponse<T> =
-  | {
-      data: T;
-      errors: null;
-      totalCount?: number;
-    }
-  | {
-      data: null;
-      errors: Array<ClerkAPIError>;
-      totalCount?: never;
-      clerkTraceId?: string;
-      status?: number;
-      statusText?: string;
-    };
-```
-
 ## `ClerkBackendApiResponse` properties
 
 | Properties | Type | Description |
 | --- | --- | --- |
 | `data` | `T[]` |  An object that contains the fetched data. |
 | `errors` | `ClerkAPIError[]` | An array of errors that occurred during the request. |
-| `totalCount` | `number` |  The total count of data that exist remotely. Only for requests that contain pagination information or where `data` is an array. |
-| `clerkTraceId` | `string` |  The Clerk trace ID for the request. |
-| `status` | `number` |  The HTTP status code of the response. |
-| `statusText` | `string` |  The HTTP status text of the response. |
+| `totalCount?` | `number` |  The total count of data that exist remotely. Only for requests that contain pagination information or where `data` is an array. |
+| `clerkTraceId?` | `string` |  The Clerk trace ID for the request. |
+| `status?` | `number` |  The HTTP status code of the response. |
+| `statusText?` | `string` |  The HTTP status text of the response. |
 
 On most requests to the backend API, you'll get back `{ data, errors }`. For requests that contain pagination information or where `data` is an array, you'll also receive `totalCount`. If an error happens, you'll get `errors` and in most cases also `clerkTraceId`, `status`, and `statusText`.
