Add env vars to clerkMiddleware doc

--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -30,6 +30,17 @@ This basic Middleware will not protext any routes. The new `clerkMiddleware()` b
 
 With the recommended matcher, all routes are protected by Clerk's authentication Middleware, with the exception of internal `/_next/` routes and static files. Static files are detected by matching on paths that end in `.+\..+`.
 
+## Environment Variables
+
+If you are building your own sign in pages, you don't need to add these pages to your `publicRoutes`. They will be inferred from your `.env` file:
+
+```ts filename=".env"
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+```
+
 ## Protect Multiple Routes
 
 `clerkMiddleare()` shipes with the helper function `createRouteMAtcher()`. `createRouteMatcher()` allows you to add an array of routes, and then check if the route the user is trying to visit matches one of the routes. You can use this matcher to protect multiple routes. 
