--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -92,7 +92,7 @@ const isTenentAdminRoute = createRouteMatcher([
 export default clerkMiddleware(
   (auth, req) => {
     // restrict admin routes to users with specific permissions 
-    if ( isTenantAdminRoute {
+    if (isTenantAdminRoute(req)) {
       auth().protect(has => has({permission: 'org:sys_memberships:manage'}) || has({permissions: 'org:sys_domains_manage'}))
     }
     // restrict organiztion routes to logged in users
