--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -174,7 +174,7 @@ import { clerkMiddleware } from '@clerk/nextjs/server';
 export default clerkMiddleware(
   (auth, req) => {
     // Your middleware checks
-  }, { debug: true }
+  }, { debug: true })
 
 export const config = {
   matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
