--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -18,17 +18,16 @@ For more information about middleware in Next.js, see the [Next.js documentation
 ```tsx filename="middleware.ts"
 import { clerkMiddleware } from '@clerk/nextjs/server';
 
-export default clerkMiddleware(
-  (auth, req) => {}
+export default clerkMiddleware()
 
 export const config = {
   matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
 };
 ````
 
-This basic Middleware will not protext any routes. The new `clerkMiddleware()` behaves in the opposite manner from the previous `authMiddleware()` that Clerk shipped with version 4 of our SDKs. With `clerkMiddleware()` all routes are now public and you must opt-in to protection for routes.
+This basic Middleware will not protect any routes. The new `clerkMiddleware()` behaves in the opposite manner from the previous `authMiddleware()` that Clerk shipped with version 4 of our SDKs. With `clerkMiddleware()` all routes are now public and you must opt-in to protection for routes.
 
-With the recommended matcher, all routes are protected by Clerk's authentication Middleware, with the exception of internal `/_next/` routes and static files. Static files are detected by matching on paths that end in `.+\..+`.
+With the recommended matcher, all routes are matched by Clerk's authentication Middleware, with the exception of internal `/_next/` routes and static files. Static files are detected by matching on paths that end in `.+\..+`.
 
 ## Environment Variables
 
@@ -43,7 +42,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 ## Protect Multiple Routes
 
-`clerkMiddleare()` shipes with the helper function `createRouteMAtcher()`. `createRouteMatcher()` allows you to add an array of routes, and then check if the route the user is trying to visit matches one of the routes. You can use this matcher to protect multiple routes. 
+`clerkMiddleare()` shipes with the helper function `createRouteMatcher()`. `createRouteMatcher()` allows you to add an array of routes, and then check if the route the user is trying to visit matches one of the routes. You can use this matcher to protect multiple routes. The paths provided to this helper can be in the same format as the paths provided tothe Next Middleware matcher.  
 
 In the following example the routes `/dashboard(.*)` and `/forum(.*)` are passed to the `createRouteMatcher()` function and assigned to `isProtectedRoute`. The Middleware logic then tests if the current route is one of the protected routes with `isProtectedRoutes(req)`, which will return true if it matches and false if it does not. 
 
@@ -132,7 +131,7 @@ if (protectedRoute(req)) {
 }
 ```
 
-This example will restrict the routes to user's with the specificied permission. `isProtectedRoute()` would be created using `createRouteMAthciner()`
+This example will restrict the routes to users with the specified permission. `isProtectedRoute()` would be created using `createRouteMAthciner()`
 ```tsx filename="middleware.ts" 
 if (isProtectedRoute(req)) { 
   auth().protect({ permission: "org:sys_profile:delete"})
@@ -227,7 +226,7 @@ The `clerkMiddleware()` function accepts an optional object. The following optio
 | ---------------------------------- | -------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `audience?`                        | `string \| string[]` | A string or list of [audiences](https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.3). If passed, it is checked against the `aud` claim in the token.                                                                                                                                                                                    |
 | `authorizedParties?`               | `string[]`           | An allowlist of origins to verify against, to protect your application from the subdomain cookie leaking attack.<br/>For example:<br/>`['http://localhost:3000', 'https://example.com']`<br/>For more information, refer to the [reference guide](/docs/references/nodejs/token-verification#validate-the-authorized-party-of-a-session-token). |
-| `clockSkewInSeconds? (deprecated)` | `number`             | Deprecated in favor of `clockSkewInMs`.                                                                                                                                                                                                                                                                                                         |
+| `clockSkewInMs?` | `number`             | Specifies the allowed time difference (in milliseconds) between the Clerk server (which generates the token) and the clock of the user's application server when validating a token. Defaults to 5000 ms (5 seconds).                                                                                                                                                                                                                                                                                                         |
 | `domain?`                          | `string`             | The domain used for satellites to inform Clerk where this application is deployed.                                                                                                                                                                                                                                                              |
 | `isSatellite?`                     | `boolean`            | When using Clerk's satellite feature, this should be enabled for secondary domains.                                                                                                                                                                                                                                                             |
 | `jwtKey?`                          | `string`             | An optional [custom JWT key](/docs/references/nodejs/token-verification#networkless-token-verification-using-the-jwt-verification-key) to use for session token validation.                                                                                                                                                                     |
