chore: Better comment clearing form error

--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -26,7 +26,7 @@ function Example() {
   const attemptSignUp = async (e: SyntheticEvent) => {
     e.preventDefault();
 
-    // clear error on form submit
+    // clear any error that may have occured during previous form submission
     setError(undefined);
 
     if (!isLoaded) { return }
@@ -107,7 +107,7 @@ function Example() {
   const attemptSignIn = async (e: SyntheticEvent) => {
     e.preventDefault();
 
-    // clear error on form submit
+    // clear any error that may have occured during previous form submission
     setError(undefined);
 
     if (!isLoaded) { return }
