style: change type of error from any to Error

--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -19,7 +19,7 @@ import { useSignUp } from "@clerk/clerk-react";
 function Example() {
   const [emailAddress, setEmailAddress] = useState('');
   const [password, setPassword] = useState('');
-  const [error, setError] = useState<any>();
+  const [error, setError] = useState<Error>();
 
   const { isLoaded, signUp, setActive } = useSignUp();
 
@@ -39,8 +39,9 @@ function Example() {
         // handle incomplete sign-up
         // other possible status are 'abandoned' & 'missing_requirements'
       }
-    } catch(err: any) {
-      setError(err);
+    } catch(err: unknown) {
+      if(err instanceof Error) setError(err);
+      return; 
     }
   };
 
@@ -100,7 +101,7 @@ import { useSignIn } from "@clerk/clerk-react";
 function Example() {
   const [emailAddress, setEmailAddress] = useState('');
   const [password, setPassword] = useState('');
-  const [error, setError] = useState<any>();
+  const [error, setError] = useState<Error>();
 
   const { isLoaded, signIn, setActive } = useSignIn();
 
@@ -120,8 +121,9 @@ function Example() {
         // handle incomplete sign-in
         // other possible status are 'needs_identifier', 'needs_first_factor', 'needs_second_factor' & 'needs_new_password'
       }
-    } catch(err: any) {
-      setError(err);
+    } catch(err: unknown) {
+      if(err instanceof Error) setError(err);
+      return; 
     }
   };
 
