style: check signIn and signUp in scope

--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -29,10 +29,10 @@ function Example() {
     // clear any error that may have occured during previous form submission
     setError(undefined);
 
-    if (!isLoaded) { return }
+    if (!isLoaded || !signUp) return;
 
     try {
-      const result = await signUp?.create({ emailAddress, password});
+      const result = await signUp.create({ emailAddress, password});
       if (result.status == 'complete') {
         await setActive({ session: result.createdSessionId });
       } else {
@@ -111,10 +111,10 @@ function Example() {
     // clear any error that may have occured during previous form submission
     setError(undefined);
 
-    if (!isLoaded) { return }
+    if (!isLoaded || !signIn) return;
 
     try {
-      const result = await signIn?.create({ identifier: emailAddress, password});
+      const result = await signIn.create({ identifier: emailAddress, password});
       if (result.status == 'complete') {
         await setActive({ session: result.createdSessionId });
       } else {
