style: remove check of clerkError property

--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -67,7 +67,7 @@ function Example() {
         />
       </div>
 
-      {error?.clerkError && 
+      {error &&
         <ul>
           {error.errors.map((el, index) => <li key={index}>{el.message}</li>)}
         </ul>
@@ -149,7 +149,7 @@ function Example() {
         />
       </div>
 
-      {error?.clerkError && 
+      {error &&
         <ul>
           {error.errors.map((el, index) => <li key={index}>{el.message}</li>)}
         </ul>
