--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -194,7 +194,7 @@ To quickly get events to test within Dev Server, you can select any individual e
   alt="The Inngest Dashboard showing an individual event payload. Red arrows point to the Events tab and the Send to Dev Server button."
 />
 
-You'll now see the event in the Inngest Dev Server's stream tab alongside any functions that it triggered.
+You'll now see the event in the Inngest Dev Server's **Stream** tab alongside any functions that it triggered.
 
 <Images
   width={1328}
