--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -185,7 +185,7 @@ npx inngest-cli@latest dev
 
 In your browser open [http://localhost:8288](http://localhost:8288) to see the development UI.
 
-To quickly get events to test within Dev Server, you can select any individual event from the Inngest Events tab then select the **Send to Dev Server**.
+To quickly get events to test within Dev Server, you can select any individual event from the **Events** tab then select the **Send to Dev Server**.
 
 <Images
   width={2142}
