--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -29,7 +29,7 @@ Clerk dashboard. Next, select the **Add Endpoint** button.
   alt="The Webhooks page in the Clerk Dashboard. A red arrow points to the button for Add Endpoint."
 />
 
-On the next page, select the **Transformation template** tab and the **Inngest** template, then click on the **Connect to Inngest **button**.**
+On the next page, select the **Transformation template** tab and the **Inngest** template, then click on the **Connect to Inngest** button.
 
 <Images
   width={1906}
