--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -114,7 +114,7 @@ Note that multiple functions can also listen to the same event. This pattern is 
 
 Often, applications need to perform additional tasks when a new user is created, like send a welcome email with tips and useful information.
 
-While it is possible to add this logic at the end of your sync function as seen in the previous section, it's better to decouple logic into different functions so issues with one task do not affect the other ones. For example, if your email fails to send, it should not affect adding the user to an email list.
+While it is possible to add this logic at the end of your sync function as seen in the [previous section](/docs/integrations/webhooks/inngest#creating-a-function-to-sync-a-new-user-to-a-database), it's better to decouple logic into different functions so issues with one task do not affect the other ones. For example, if your email fails to send, it should not affect adding the user to an email list.
 
 With Inngest, each function has automatic retries, so only the code that has issues is re-run.
 
