--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -177,7 +177,7 @@ Now, you've extended the usefulness of Clerk webhook events even further to buil
 
 ## Testing webhook events using the Inngest Dev Server
 
-During local development with Inngest, you can use the Inngest Dev Server to run and test your functions on your own machine. To start the server, in your project directory run the following command:
+During local development with Inngest, you can use the [Inngest Dev Server](https://www.inngest.com/docs/local-development) to run and test your functions on your own machine. To start the server, in your project directory run the following command:
 
 ```sh filename="terminal"
 npx inngest-cli@latest dev
