--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -8,9 +8,9 @@ description: Learn how to integrate Clerk with Inngest.
 Webhooks allow you to [synchronize data](/docs/users/sync-data) from Clerk to your application backend. You can either handle them directly in your backend with an endpoint or use a tool like [Inngest](https://inngest.com/) which receives the webhook events for you and reliably executes functions in your codebase. When handling webhooks, Inngest receives the webhook events for you and uses a built-in queue to reliably execute longer running functions with additional functionality including:
 
 * [Limiting concurrency](https://www.inngest.com/docs/guides/concurrency) to handle spikes in events without overwhelming your API or database.
-* Trigger multiple functions from a single event ([fan-out jobs](https://www.inngest.com/docs/guides/fan-out-jobs)).
-* [Delay code](https://www.inngest.com/docs/functions/multi-step) to run after a period of time.
-* [Debounce events](https://www.inngest.com/docs/reference/functions/debounce) to reduce duplicate processing.
+* Triggering multiple functions from a single event ([fan-out jobs](https://www.inngest.com/docs/guides/fan-out-jobs)).
+* [Delaying code](https://www.inngest.com/docs/functions/multi-step) to run after a period of time.
+* [Debouncing events](https://www.inngest.com/docs/reference/functions/debounce) to reduce duplicate processing.
 
 In this guide, you'll learn how to set up Inngest to receive Clerk webhook events and how to define Inngest functions in your application using Clerk events including synchronizing data and sending welcome emails.
 
