--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -18,9 +18,7 @@ To follow this guide, you need an Inngest account and have Inngest [set up](http
 
 ## Setting up the Inngest webhook
 
-To create an Inngest webhook endpoint and add it to your Clerk account, open the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) page at the
-
-Clerk dashboard. Next, select the **Add Endpoint** button.
+To create an Inngest webhook endpoint and add it to your Clerk account, open the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) page at the Clerk dashboard. Next, select the **Add Endpoint** button.
 
 <Images
   width={2578}
