--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -122,7 +122,7 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
 
 ### Add Middleware to your app
 
-Middleware will allow you to access user auth state on any route or page in your application. `clerkMiddleware()` also provides you with the ability to protect routes, but by default it does not protect any routes.
+Middleware grants you access to user authentication state throughout your application, on any route or page. While `clerkMiddleware()` offers the capability to protect routes, it does not enforce protection by default.
 
 Create a middleware.ts file. If your application uses the src/ directory, your middleware.ts file should be placed inside the src/ folder. If you are not using a src/ directory, place the middleware.ts file in your root directory alongside .env.local.
 
